src/test/compile-fail/bind-stack-closure.rs
// -*- rust -*-

fn foo(x: block()) {
    bind x(); //! ERROR cannot bind block closures
}

fn main() {
}
